--- a/style.css
+++ b/style.css
@@ -125,8 +125,25 @@ footer p{
 }
   
 .option {
+    padding: 10px;
+    margin: 10px 0;
+    background-color: #f4f4f4;
+    color: black;
+    border-radius: 5px;
+    cursor: pointer;
     display: block;
-    margin-bottom: 10px;
+}
+
+.option:hover {
+    background-color: #428bca;
+}
+
+.option input[type='radio'] {
+    margin-right: 10px;
+}
+
+.option-selected {
+    background-color: #428bca;
 }
   
 .button {
