--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header a{
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    height: 90vh;
+    height: 100vh;
     color: white;
     background-image: linear-gradient(
         0deg,
@@ -88,11 +88,9 @@ footer p{
     border: none;
     color: black;
     padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
+    font-family: Poppins;
     transition-duration: 0.4s;
     cursor: pointer;
     border: 2px solid #f44336;
