--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
 }
 
@@ -13,17 +13,13 @@ h2{ font-size: 2.7em;}
 h3{ font-size: 2em;}
 p{ font-size: 1em;}
 
-.contenedor{
-    max-width: 1400px;
-    margin: auto;
-}
 header{
     color: rgb(100, 100, 100);
 }
 header .logo{
     margin: 0;
     font-size: 2em;
-    font-weight: bold;/*lo hace mas negrito*/
+    font-weight: bold;
     padding: 15px 20px;
     color: black;
 }
