--- a/manzanas/style.css
+++ b/manzanas/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 body{
-    font-family: sans-serif;
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
@@ -13,10 +12,6 @@ h2{ font-size: 2.7em;}
 h3{ font-size: 2em;}
 p{ font-size: 1em;}
 
-.arriba{
-    max-width: 1400px;
-    margin: auto;
-}
 
 header{
     color: rgb(100, 100, 100);
@@ -25,28 +20,32 @@ header{
 header .logo{
     margin: 0;
     font-size: 2em;
-    font-weight: bold;/*lo hace mas negrito*/
-    padding: 15px 20px;
-    color: black;
-}
-
-header .arriba{
-    display: flex;/*Acomodas los elemento que pongas */
-    flex-direction: column;/*y esto lo acomoda para que sea en columna*/
-    align-items: center;/*esto hace que se centre*/
-}
-
-header nav{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-header a{
-    padding: 15px 20px;
-    text-decoration: none;
     font-weight: bold;
+    padding: 15px 20px;
     color: black;
+}
+
+header nav ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+header nav ul li{
+    list-style: none;
+    float: left;
+    
+}
+header a{
+    display: block;
+    color: white;
+
+    padding: 14px 16px;
+    text-decoration: none;
+}
+header li a:hover {
+    background-color: #111;
 }
 
 #hero{
@@ -82,6 +81,7 @@ footer p{
     padding: 12px;
     color: rgb(100, 100, 100);
 }
+
 
 .empezar {
     background-color: white;
